deployments/prd/deployment.yaml
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: lab-app-python
  namespace: default
  labels:
    app: lab-app-python
spec:
  replicas: 2
  selector:
    matchLabels:
      app: lab-app-python
  template:
    metadata:
      labels:
        app: lab-app-python
    spec:
      containers:
      - name: lab-app-python
        image: registry.docker-registry.svc:5001/prd/lab-app-python:latest
        ports:
        - containerPort: 8080
          protocol: TCP
